--- a/pages/content.html
+++ b/pages/content.html
@@ -12,6 +12,8 @@
         <li><a href="books.html">Self Development Books</a></li>
     </ul>
 
+    <a href="../index.html">Back to homepage...</a>
+
 </body>
 </html>
 
