corrected img target attribute

--- a/pages/bjj.html
+++ b/pages/bjj.html
@@ -11,13 +11,13 @@
         like an intense physical version of chess. It both gives you
         great physical training and teaches you fast problem-solving at
         the same time. More info about BJJ 
-        <a href="https://en.wikipedia.org/wiki/Brazilian_jiu-jitsu" target="blank">here</a>.
+        <a href="https://en.wikipedia.org/wiki/Brazilian_jiu-jitsu" target="_blank">here</a>.
     </p>
 
     <figure>
         <img src="../images/bjj-image.jpg" alt="Two athletes in a competition fight">
         <figcaption>Source: 
-            <a href="https://unsplash.com/photos/Yf1SegAI84o" target="blank">https://unsplash.com/photos/Yf1SegAI84o</a>
+            <a href="https://unsplash.com/photos/Yf1SegAI84o" target="_blank">https://unsplash.com/photos/Yf1SegAI84o</a>
         </figcaption>
     </figure>
 
