--- a/pages/books.html
+++ b/pages/books.html
@@ -13,13 +13,13 @@
         to take classes in these subjects and read scientific articles,
         I like to read books that are easily applicable to my life
         and are enjoyable to read. One author whose blog and books I've
-        always liked is <a href="https://markmanson.net/" target="blank">Mark Manson</a>.
+        always liked is <a href="https://markmanson.net/" target="_blank">Mark Manson</a>.
     </p>
 
     <figure>
         <img src="../images/books-image.jpg" alt="A pile of self help books">
         <figcaption>Source: 
-            <a href="https://unsplash.com/photos/mo3FOTG62ao" target="blank">https://unsplash.com/photos/mo3FOTG62ao</a>
+            <a href="https://unsplash.com/photos/mo3FOTG62ao" target="_blank">https://unsplash.com/photos/mo3FOTG62ao</a>
         </figcaption>
     </figure>
 
