--- a/pages/dj.html
+++ b/pages/dj.html
@@ -11,13 +11,13 @@
         It teaches you to improvize on the fly and gives you a good ear and taste
         for different music. My favourite genres are deep house, techno and
         drum &amp; bass. Learn more about the art of DJing 
-        <a href="https://en.wikipedia.org/wiki/Disc_jockey" target="blank">here</a>.
+        <a href="https://en.wikipedia.org/wiki/Disc_jockey" target="_blank">here</a>.
     </p>
 
     <figure>
         <img src="../images/dj-image.jpg" alt="Playing on a DJ controller">
         <figcaption>Source: 
-            <a href="https://unsplash.com/photos/6CnYJ-5k2iM" target="blank">https://unsplash.com/photos/6CnYJ-5k2iM</a>
+            <a href="https://unsplash.com/photos/6CnYJ-5k2iM" target="_blank">https://unsplash.com/photos/6CnYJ-5k2iM</a>
         </figcaption>
     </figure>
 
